--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Roboto,"Helvetica Neue",Arial,sans-serif;
+    font-family: "Roboto","Helvetica Neue",Arial,sans-serif;
     color: #292b2c;
 }
 p{
@@ -27,12 +27,6 @@ p{
     color: #fff;
     font-weight: bold;
 }
-.container1 h1{
-    font-size: 3.6rem;
-    color: #fff;
-    text-align: center;
-    font-weight: bold;
-}
 .container1 p{
     font-size: 1.25rem;
     color: #fff;
@@ -51,10 +45,6 @@ p{
 }
 .container2 h4{
     font-size: 1.5rem;
-}
-.container2 p{
-    margin-top: 0;
-    margin-bottom: 1rem;
 }
 .sub-container{
     display: flex;
@@ -172,4 +162,62 @@ img{
     color: #192440;
     display: inline-block;
     align-self: center;
+}
+
+@media screen and (max-width: 480px) {
+    p{
+        margin-top: 0;
+        margin-bottom: .4rem;
+    }
+    .container1{
+        padding: 3rem;
+    }
+    .container1 h1{
+        font-size: 1.5rem;
+        line-height: 1;
+        color: #fff;
+        font-weight: bold;
+    }
+    .container2{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 2.5rem;
+    }
+    .container2 h4{
+        font-size: 1rem;
+        font-weight: bold;
+    }
+    .sub-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
+    }
+    .business1, .business2{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        margin-top: 1.6rem;
+        gap: 4rem;
+    }
+    img{
+        width: 10.5rem;
+        height: 5.5rem;
+    }
+    .contact{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 3rem; 
+        background-size: cover; 
+        background-image: url("./image/contact-bk.jpg");
+        gap: 2rem;
+    }
+    .footer{
+        padding: 1rem 1.5rem;
+        gap: .5rem;
+    }
 }
