--- a/style.css
+++ b/style.css
@@ -219,5 +219,17 @@ img{
     .footer{
         padding: 1rem 1.5rem;
         gap: .5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: .2rem;
+    }
+    .footer-link{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: .5rem;
     }
 }
